--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'F2351'
 - !lcsh 'Suriname -- History -- To 1814'
 - !lcsh 'Suriname -- Description and travel'
+- GITenberg
 title: Reize naar Surinamen en door de binnenste gedeelten van Guiana — Deel 4
 url: http://www.gutenberg.org/ebooks/8099
